--- a/Practice_02/HR_practice.ipynb
+++ b/Practice_02/HR_practice.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -126,46 +126,145 @@
        "      <td>sales</td>\n",
        "      <td>low</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14994</th>\n",
+       "      <td>0.40</td>\n",
+       "      <td>0.57</td>\n",
+       "      <td>2</td>\n",
+       "      <td>151</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>support</td>\n",
+       "      <td>low</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14995</th>\n",
+       "      <td>0.37</td>\n",
+       "      <td>0.48</td>\n",
+       "      <td>2</td>\n",
+       "      <td>160</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>support</td>\n",
+       "      <td>low</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14996</th>\n",
+       "      <td>0.37</td>\n",
+       "      <td>0.53</td>\n",
+       "      <td>2</td>\n",
+       "      <td>143</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>support</td>\n",
+       "      <td>low</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14997</th>\n",
+       "      <td>0.11</td>\n",
+       "      <td>0.96</td>\n",
+       "      <td>6</td>\n",
+       "      <td>280</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>support</td>\n",
+       "      <td>low</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14998</th>\n",
+       "      <td>0.37</td>\n",
+       "      <td>0.52</td>\n",
+       "      <td>2</td>\n",
+       "      <td>158</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>support</td>\n",
+       "      <td>low</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>14999 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   satisfaction_level  last_evaluation  number_project  average_montly_hours  \\\n",
-       "0                0.38             0.53               2                   157   \n",
-       "1                0.80             0.86               5                   262   \n",
-       "2                0.11             0.88               7                   272   \n",
-       "3                0.72             0.87               5                   223   \n",
-       "4                0.37             0.52               2                   159   \n",
+       "       satisfaction_level  last_evaluation  number_project  \\\n",
+       "0                    0.38             0.53               2   \n",
+       "1                    0.80             0.86               5   \n",
+       "2                    0.11             0.88               7   \n",
+       "3                    0.72             0.87               5   \n",
+       "4                    0.37             0.52               2   \n",
+       "...                   ...              ...             ...   \n",
+       "14994                0.40             0.57               2   \n",
+       "14995                0.37             0.48               2   \n",
+       "14996                0.37             0.53               2   \n",
+       "14997                0.11             0.96               6   \n",
+       "14998                0.37             0.52               2   \n",
        "\n",
-       "   time_spend_company  Work_accident  left  promotion_last_5years  sales  \\\n",
-       "0                   3              0     1                      0  sales   \n",
-       "1                   6              0     1                      0  sales   \n",
-       "2                   4              0     1                      0  sales   \n",
-       "3                   5              0     1                      0  sales   \n",
-       "4                   3              0     1                      0  sales   \n",
+       "       average_montly_hours  time_spend_company  Work_accident  left  \\\n",
+       "0                       157                   3              0     1   \n",
+       "1                       262                   6              0     1   \n",
+       "2                       272                   4              0     1   \n",
+       "3                       223                   5              0     1   \n",
+       "4                       159                   3              0     1   \n",
+       "...                     ...                 ...            ...   ...   \n",
+       "14994                   151                   3              0     1   \n",
+       "14995                   160                   3              0     1   \n",
+       "14996                   143                   3              0     1   \n",
+       "14997                   280                   4              0     1   \n",
+       "14998                   158                   3              0     1   \n",
        "\n",
-       "   salary  \n",
-       "0     low  \n",
-       "1  medium  \n",
-       "2  medium  \n",
-       "3     low  \n",
-       "4     low  "
+       "       promotion_last_5years    sales  salary  \n",
+       "0                          0    sales     low  \n",
+       "1                          0    sales  medium  \n",
+       "2                          0    sales  medium  \n",
+       "3                          0    sales     low  \n",
+       "4                          0    sales     low  \n",
+       "...                      ...      ...     ...  \n",
+       "14994                      0  support     low  \n",
+       "14995                      0  support     low  \n",
+       "14996                      0  support     low  \n",
+       "14997                      0  support     low  \n",
+       "14998                      0  support     low  \n",
+       "\n",
+       "[14999 rows x 10 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "hr_df = pd.read_csv(r'C:\\Users\\wdl\\Data-analysis\\Practice_02\\data\\HR_comma_sep.csv')\n",
-    "hr_df.head()"
+    "hr_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -194,6 +293,82 @@
    ],
    "source": [
     "hr_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    14999.000000\n",
+       "mean         0.612834\n",
+       "std          0.248631\n",
+       "min          0.090000\n",
+       "25%          0.440000\n",
+       "50%          0.640000\n",
+       "75%          0.820000\n",
+       "max          1.000000\n",
+       "Name: satisfaction_level, dtype: float64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hr_df.satisfaction_level.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Series([], Name: satisfaction_level, dtype: float64)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hr_df.satisfaction_level[hr_df.satisfaction_level.isna()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    14999.000000\n",
+       "mean         0.716102\n",
+       "std          0.171169\n",
+       "min          0.360000\n",
+       "25%          0.560000\n",
+       "50%          0.720000\n",
+       "75%          0.870000\n",
+       "max          1.000000\n",
+       "Name: last_evaluation, dtype: float64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hr_df.last_evaluation.describe()"
    ]
   }
  ],
