--- a/五大实战项目/2.物流数据分析/物流数据分析.ipynb
+++ b/五大实战项目/2.物流数据分析/物流数据分析.ipynb
@@ -1906,7 +1906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1921,13 +1921,13 @@
        "    });\n",
        "</script>\n",
        "\n",
-       "        <div id=\"d2a599cf772f497296de660df890a180\" style=\"width:900px; height:500px;\"></div>\n",
+       "        <div id=\"34a3ffa4fe8a4b6a80eb83c75ca4c8d4\" style=\"width:900px; height:500px;\"></div>\n",
        "\n",
        "<script>\n",
        "        require(['echarts'], function(echarts) {\n",
-       "                var chart_d2a599cf772f497296de660df890a180 = echarts.init(\n",
-       "                    document.getElementById('d2a599cf772f497296de660df890a180'), 'dark', {renderer: 'canvas'});\n",
-       "                var option_d2a599cf772f497296de660df890a180 = {\n",
+       "                var chart_34a3ffa4fe8a4b6a80eb83c75ca4c8d4 = echarts.init(\n",
+       "                    document.getElementById('34a3ffa4fe8a4b6a80eb83c75ca4c8d4'), 'dark', {renderer: 'canvas'});\n",
+       "                var option_34a3ffa4fe8a4b6a80eb83c75ca4c8d4 = {\n",
        "    \"animation\": true,\n",
        "    \"animationThreshold\": 2000,\n",
        "    \"animationDuration\": 1000,\n",
@@ -1952,27 +1952,27 @@
        "            \"step\": false,\n",
        "            \"data\": [\n",
        "                [\n",
-       "                    \"7\\u6708\",\n",
+       "                    \"7\",\n",
        "                    283.0\n",
        "                ],\n",
        "                [\n",
-       "                    \"8\\u6708\",\n",
+       "                    \"8\",\n",
        "                    1413.0\n",
        "                ],\n",
        "                [\n",
-       "                    \"9\\u6708\",\n",
+       "                    \"9\",\n",
        "                    1693.0\n",
        "                ],\n",
        "                [\n",
-       "                    \"10\\u6708\",\n",
+       "                    \"10\",\n",
        "                    4.0\n",
        "                ],\n",
        "                [\n",
-       "                    \"11\\u6708\",\n",
+       "                    \"11\",\n",
        "                    20.0\n",
        "                ],\n",
        "                [\n",
-       "                    \"12\\u6708\",\n",
+       "                    \"12\",\n",
        "                    4.0\n",
        "                ]\n",
        "            ],\n",
@@ -2008,27 +2008,27 @@
        "            \"step\": false,\n",
        "            \"data\": [\n",
        "                [\n",
-       "                    \"7\\u6708\",\n",
+       "                    \"7\",\n",
        "                    486.0\n",
        "                ],\n",
        "                [\n",
-       "                    \"8\\u6708\",\n",
+       "                    \"8\",\n",
        "                    2863.0\n",
        "                ],\n",
        "                [\n",
-       "                    \"9\\u6708\",\n",
+       "                    \"9\",\n",
        "                    2751.0\n",
        "                ],\n",
        "                [\n",
-       "                    \"10\\u6708\",\n",
+       "                    \"10\",\n",
        "                    28400.0\n",
        "                ],\n",
        "                [\n",
-       "                    \"11\\u6708\",\n",
+       "                    \"11\",\n",
        "                    1323.0\n",
        "                ],\n",
        "                [\n",
-       "                    \"12\\u6708\",\n",
+       "                    \"12\",\n",
        "                    17903.0\n",
        "                ]\n",
        "            ],\n",
@@ -2064,27 +2064,27 @@
        "            \"step\": false,\n",
        "            \"data\": [\n",
        "                [\n",
-       "                    \"7\\u6708\",\n",
+       "                    \"7\",\n",
        "                    2041.5\n",
        "                ],\n",
        "                [\n",
-       "                    \"8\\u6708\",\n",
+       "                    \"8\",\n",
        "                    1045.0\n",
        "                ],\n",
        "                [\n",
-       "                    \"9\\u6708\",\n",
+       "                    \"9\",\n",
        "                    1670.0\n",
        "                ],\n",
        "                [\n",
-       "                    \"10\\u6708\",\n",
+       "                    \"10\",\n",
        "                    1679.0\n",
        "                ],\n",
        "                [\n",
-       "                    \"11\\u6708\",\n",
+       "                    \"11\",\n",
        "                    97.0\n",
        "                ],\n",
        "                [\n",
-       "                    \"12\\u6708\",\n",
+       "                    \"12\",\n",
        "                    2167.0\n",
        "                ]\n",
        "            ],\n",
@@ -2120,27 +2120,27 @@
        "            \"step\": false,\n",
        "            \"data\": [\n",
        "                [\n",
-       "                    \"7\\u6708\",\n",
+       "                    \"7\",\n",
        "                    414.0\n",
        "                ],\n",
        "                [\n",
-       "                    \"8\\u6708\",\n",
+       "                    \"8\",\n",
        "                    1184.0\n",
        "                ],\n",
        "                [\n",
-       "                    \"9\\u6708\",\n",
+       "                    \"9\",\n",
        "                    0.0\n",
        "                ],\n",
        "                [\n",
-       "                    \"10\\u6708\",\n",
+       "                    \"10\",\n",
        "                    2540.0\n",
        "                ],\n",
        "                [\n",
-       "                    \"11\\u6708\",\n",
+       "                    \"11\",\n",
        "                    3.0\n",
        "                ],\n",
        "                [\n",
-       "                    \"12\\u6708\",\n",
+       "                    \"12\",\n",
        "                    1080.0\n",
        "                ]\n",
        "            ],\n",
@@ -2176,27 +2176,27 @@
        "            \"step\": false,\n",
        "            \"data\": [\n",
        "                [\n",
-       "                    \"7\\u6708\",\n",
+       "                    \"7\",\n",
        "                    728.0\n",
        "                ],\n",
        "                [\n",
-       "                    \"8\\u6708\",\n",
+       "                    \"8\",\n",
        "                    2374.0\n",
        "                ],\n",
        "                [\n",
-       "                    \"9\\u6708\",\n",
+       "                    \"9\",\n",
        "                    269.0\n",
        "                ],\n",
        "                [\n",
-       "                    \"10\\u6708\",\n",
+       "                    \"10\",\n",
        "                    1981.0\n",
        "                ],\n",
        "                [\n",
-       "                    \"11\\u6708\",\n",
+       "                    \"11\",\n",
        "                    14.0\n",
        "                ],\n",
        "                [\n",
-       "                    \"12\\u6708\",\n",
+       "                    \"12\",\n",
        "                    344.0\n",
        "                ]\n",
        "            ],\n",
@@ -2232,27 +2232,27 @@
        "            \"step\": false,\n",
        "            \"data\": [\n",
        "                [\n",
-       "                    \"7\\u6708\",\n",
+       "                    \"7\",\n",
        "                    1631.0\n",
        "                ],\n",
        "                [\n",
-       "                    \"8\\u6708\",\n",
+       "                    \"8\",\n",
        "                    1151.0\n",
        "                ],\n",
        "                [\n",
-       "                    \"9\\u6708\",\n",
+       "                    \"9\",\n",
        "                    342.0\n",
        "                ],\n",
        "                [\n",
-       "                    \"10\\u6708\",\n",
+       "                    \"10\",\n",
        "                    2351.0\n",
        "                ],\n",
        "                [\n",
-       "                    \"11\\u6708\",\n",
+       "                    \"11\",\n",
        "                    362.0\n",
        "                ],\n",
        "                [\n",
-       "                    \"12\\u6708\",\n",
+       "                    \"12\",\n",
        "                    2483.0\n",
        "                ]\n",
        "            ],\n",
@@ -2358,12 +2358,12 @@
        "                }\n",
        "            },\n",
        "            \"data\": [\n",
-       "                \"7\\u6708\",\n",
-       "                \"8\\u6708\",\n",
-       "                \"9\\u6708\",\n",
-       "                \"10\\u6708\",\n",
-       "                \"11\\u6708\",\n",
-       "                \"12\\u6708\"\n",
+       "                \"7\",\n",
+       "                \"8\",\n",
+       "                \"9\",\n",
+       "                \"10\",\n",
+       "                \"11\",\n",
+       "                \"12\"\n",
        "            ]\n",
        "        }\n",
        "    ],\n",
@@ -2503,15 +2503,15 @@
        "        \"borderWidth\": 0\n",
        "    }\n",
        "};\n",
-       "                chart_d2a599cf772f497296de660df890a180.setOption(option_d2a599cf772f497296de660df890a180);\n",
+       "                chart_34a3ffa4fe8a4b6a80eb83c75ca4c8d4.setOption(option_34a3ffa4fe8a4b6a80eb83c75ca4c8d4);\n",
        "        });\n",
        "    </script>\n"
       ],
       "text/plain": [
-       "<pyecharts.render.display.HTML at 0x190a6d3f150>"
+       "<pyecharts.render.display.HTML at 0x190b02ac8d0>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2523,7 +2523,7 @@
     "\n",
     "\n",
     "line = Line(init_opts=opts.InitOpts(theme='dark'))\n",
-    "line.add_xaxis(xaxis_data=[f'{i}月' for i in data5.index.tolist()])\n",
+    "line.add_xaxis(xaxis_data=[f'{i}' for i in data5.index.tolist()])\n",
     "line.add_yaxis(\n",
     "    series_name=\"货品1\",\n",
     "    y_axis=data5.loc[7:12, '货品1'].tolist(),\n",
