--- a/五大实战项目/5.O2O优惠券/O2O优惠券线下使用情况.ipynb
+++ b/五大实战项目/5.O2O优惠券/O2O优惠券线下使用情况.ipynb
@@ -2302,7 +2302,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\wdl\\AppData\\Local\\Temp\\ipykernel_4552\\1011993814.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\wdl\\AppData\\Local\\Temp\\ipykernel_8624\\1011993814.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -3668,12 +3668,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\wdl\\AppData\\Local\\Temp\\ipykernel_4552\\2049594753.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\wdl\\AppData\\Local\\Temp\\ipykernel_8624\\2049594753.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  temp_df2.drop('month', axis=1, inplace=True)\n",
-      "C:\\Users\\wdl\\AppData\\Local\\Temp\\ipykernel_4552\\2049594753.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\wdl\\AppData\\Local\\Temp\\ipykernel_8624\\2049594753.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -3746,7 +3746,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\wdl\\AppData\\Local\\Temp\\ipykernel_4552\\2856122812.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\wdl\\AppData\\Local\\Temp\\ipykernel_8624\\2856122812.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -4071,7 +4071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -4262,7 +4262,7 @@
        "[629824 rows x 8 columns]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4273,16 +4273,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x000001B46427FE90>"
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x00000225AB69A7D0>"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4294,7 +4294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -4303,7 +4303,7 @@
        "61"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4314,7 +4314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -4335,13 +4335,13 @@
        "Name: Date, Length: 5347, dtype: bool"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "temp_df3.Date.count() < 100"
+    "temp_df3.Date.count() < 100 # 优惠券领取次数小于100的商户数量,"
    ]
   },
   {
